--- a/Projektinis/Gataveckas_Gaulia_Martinkus_projektinio_kodas_DM_2gr.html
+++ b/Projektinis/Gataveckas_Gaulia_Martinkus_projektinio_kodas_DM_2gr.html
@@ -1888,7 +1888,7 @@ classification_eval &lt;- function(model, data) {
 
 
 
-  classification_metrics &lt;- metric_set(accuracy, j_index, f_meas)
+  classification_metrics &lt;- metric_set(accuracy, f_meas)
 
   print(&quot;Maišos matrica&quot;)
   print(conf_mat(df_pred_truth,
@@ -1922,13 +1922,12 @@ print(&quot;Pradinis multinominės logistinės regresijos modelis&quot;)</code><
 ##          2 12  0 22  0
 ##          3  1  2  0  7
 ## [1] &quot;Modelio kokybės metrikos&quot;
-## # A tibble: 4 x 3
+## # A tibble: 3 x 3
 ##   .metric       .estimator .estimate        
 ##   &lt;chr&gt;         &lt;chr&gt;      &lt;chr&gt;            
 ## 1 accuracy      multiclass 0.670103092783505
-## 2 j_index       macro      0.525509827074684
-## 3 f_meas        macro      0.656323877068558
-## 4 custom_metric multiclass 0.824742268041237
+## 2 f_meas        macro      0.656323877068558
+## 3 custom_metric multiclass 0.824742268041237
 ## # A tibble: 1 x 3
 ##   .metric .estimator .estimate
 ##   &lt;chr&gt;   &lt;chr&gt;          &lt;dbl&gt;
@@ -2044,13 +2043,12 @@ model_logistic2_small &lt;- stats::step(model_logistic2, direction = &quot;both&
 ##          2 14  0 38  0
 ##          3  2  0  0 46
 ## [1] &quot;Modelio kokybės metrikos&quot;
-## # A tibble: 4 x 3
+## # A tibble: 3 x 3
 ##   .metric       .estimator .estimate        
 ##   &lt;chr&gt;         &lt;chr&gt;      &lt;chr&gt;            
 ## 1 accuracy      multiclass 0.829787234042553
-## 2 j_index       macro      0.773049645390071
-## 3 f_meas        macro      0.821463479467331
-## 4 custom_metric multiclass 0.906914893617021
+## 2 f_meas        macro      0.821463479467331
+## 3 custom_metric multiclass 0.906914893617021
 ## # A tibble: 1 x 3
 ##   .metric .estimator .estimate
 ##   &lt;chr&gt;   &lt;chr&gt;          &lt;dbl&gt;
@@ -2088,7 +2086,7 @@ class_predictions &lt;- function() {
 
 classification_test &lt;- function(model, data, name) {
   df_pred_truth &lt;- tibble(truth = data$category)
-  classification_metrics &lt;- metric_set(accuracy, j_index, f_meas)
+  classification_metrics &lt;- metric_set(accuracy, f_meas)
 
   if (name == &quot;Naudojant du regresijos modelius&quot;) {
     df_pred_truth$predicted &lt;- factor(class_predictions(), levels = c(0, 1, 2, 3))
@@ -2135,13 +2133,12 @@ print(&quot;Naudojant pradinį multinominės logistinės regresijos modelį&quot
 ## 2 Correct migration     2
 ## 3 Correct natural       8
 ## [1] &quot;Modelio kokybės metrikos&quot;
-## # A tibble: 4 x 3
+## # A tibble: 3 x 3
 ##   .metric       .estimator .estimate        
 ##   &lt;chr&gt;         &lt;chr&gt;      &lt;chr&gt;            
 ## 1 accuracy      multiclass 0.6              
-## 2 j_index       macro      0.333928571428571
-## 3 f_meas        macro      0.527777777777778
-## 4 custom_metric multiclass 0.8</code></pre>
+## 2 f_meas        macro      0.527777777777778
+## 3 custom_metric multiclass 0.8</code></pre>
 <pre class="r"><code>print(&quot;Naudojant multinomės logistinės regresijos modelį su SMOTE&quot;)</code></pre>
 <pre><code>## [1] &quot;Naudojant multinomės logistinės regresijos modelį su SMOTE&quot;</code></pre>
 <pre class="r"><code>classification_test(model_logistic2_small, test, &quot;SMOTE&quot;)</code></pre>
@@ -2158,13 +2155,12 @@ print(&quot;Naudojant pradinį multinominės logistinės regresijos modelį&quot
 ## 1 Correct both       17
 ## 2 Correct natural     8
 ## [1] &quot;Modelio kokybės metrikos&quot;
-## # A tibble: 4 x 3
+## # A tibble: 3 x 3
 ##   .metric       .estimator .estimate        
 ##   &lt;chr&gt;         &lt;chr&gt;      &lt;chr&gt;            
 ## 1 accuracy      multiclass 0.68             
-## 2 j_index       macro      0.499900793650794
-## 3 f_meas        macro      0.621212121212121
-## 4 custom_metric multiclass 0.84</code></pre>
+## 2 f_meas        macro      0.621212121212121
+## 3 custom_metric multiclass 0.84</code></pre>
 <pre class="r"><code>classification_test(model_logistic, test, &quot;Naudojant du regresijos modelius&quot;)</code></pre>
 <pre><code>## [1] &quot;Maišos matrica&quot;
 ##           Truth
@@ -2181,13 +2177,12 @@ print(&quot;Naudojant pradinį multinominės logistinės regresijos modelį&quot
 ## 3 Correct natural      11
 ## 4 Correct none          1
 ## [1] &quot;Modelio kokybės metrikos&quot;
-## # A tibble: 4 x 3
+## # A tibble: 3 x 3
 ##   .metric       .estimator .estimate        
 ##   &lt;chr&gt;         &lt;chr&gt;      &lt;chr&gt;            
 ## 1 accuracy      multiclass 0.48             
-## 2 j_index       macro      0.170634920634921
-## 3 f_meas        macro      0.535873015873016
-## 4 custom_metric multiclass 0.72</code></pre>
+## 2 f_meas        macro      0.535873015873016
+## 3 custom_metric multiclass 0.72</code></pre>
 </div>
 
 
